--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,14 @@
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PG2BP9ZVD5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PG2BP9ZVD5');
+  </script>
+  
   <meta charset="UTF-8">
   <title>{{ site.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,8 +38,6 @@
           }
       });
   </script>
-
-  {% include google-analytics.html %}
 
   <!-- Script Header for Code Highlight -->
   <link href="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/styles/a11y-dark.min.css" rel="stylesheet">
