--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,14 @@
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PG2BP9ZVD5"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y4PGDHGW4Y"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-PG2BP9ZVD5');
+    gtag('config', 'G-Y4PGDHGW4Y');
   </script>
-  
+
   <meta charset="UTF-8">
   <title>{{ site.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
