Update Style, Update Baidu Statistics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,4 @@
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y4PGDHGW4Y"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-Y4PGDHGW4Y');
-  </script>
-
   <meta charset="UTF-8">
   <title>{{ site.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -46,4 +36,14 @@
 
   <!-- Script Header for Code Language Selector in Algo Notes -->
   <script src="{{ site.baseurl }}/js/algorithmLangSelector.js"></script>
-</head>
+
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?1d1abbfeb50113aa21bb45c09fd225fa";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+    
