--- a/_layouts/home_page.html
+++ b/_layouts/home_page.html
@@ -35,7 +35,7 @@ useTOC: true
     <section class="main-page-header">
         <div class="main-header-container">
         <!--<div class="main-project-name">{{ site.title }}</div>-->
-        <img src="{{ site.baseurl }}\css\header-black.png" height="65%" width="65%" style="display:block; margin: 0 auto 0 auto;"/>
+        <img src="{{ site.baseurl }}\css\whiteTest.png" height="65%" width="65%" style="display:block; margin: 0 auto 0 auto;"/>
         <span class="text-slider-items" style="display: none;"> 
             A place for everyone who ❤ Computer Science | A place to learn Algorithms | A place to learn Artificial Intelligence | A place to share knowledge | A place to create Cool Stuff | A place to show your Project
         </span> 
