--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,5 +1,5 @@
 <section class="page-header">
-  <img src="{{ site.baseurl }}\css\whiteTest.png" height="50%" width="50%" style="display:block; margin: 0 auto 0 auto;"/>
+  <img src="{{ site.baseurl }}\css\whiteTest2.png" height="50%" width="50%" style="display:block; margin: 0 auto 0 auto;"/>
   <!--<h1 class="project-name">{{ site.title }}</h1>-->
   <h1 class="project-tagline">{{ site.tagline }}</h1>
   <!--<a href="#" class="btn">Download .zip</a>
