--- a/css/cayman.css
+++ b/css/cayman.css
@@ -139,6 +139,10 @@ a:hover { text-decoration: underline; }
 @media screen and (max-width: 42em) { .btn { display: block; width: 40%; padding: 0.75rem; font-size: 0.9rem; margin: 2rem auto 0 auto;}
   .btn + .btn { margin-top: 1rem; margin-left: 0; } }
 
+.main-btn { padding: 0.75rem 1rem; display: inline-block; margin-bottom: 1rem; color: #444444; background-color: rgba(255, 255, 255, 0.08); border-color: #aaaaaa; border-style: solid; border-width: 1px; border-radius: 0.3rem; transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
+.main-btn:hover { color: #777777; text-decoration: none; background-color: rgba(255, 255, 255, 0.2); border-color: #eeeeee; }
+.main-btn + .main-btn { margin-left: 1rem; }
+
 /*.page-header { color: #fff; text-align: center; background-color: #159957; background-image: linear-gradient(120deg, #152999, #156699); }*/
 .page-header {
   /*color: rgba(36, 48, 117, 0.903);*/
