--- a/_layouts/algo_note.html
+++ b/_layouts/algo_note.html
@@ -3,6 +3,14 @@ layout: default
 comments: false
 Author: Anonymous
 ---
+<head>
+  <!-- Script Header for Code Highlight -->
+  <link href="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/styles/a11y-dark.min.css" rel="stylesheet">
+  <script src="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
+  <!-- Script Header for Code Language Selector in Algo Notes -->
+  <script src="{{ site.baseurl }}/js/algorithmLangSelector.js"></script>
+</head>
 <script>window.onload = selectPython</script>
 {% include report-problem.html %}
 
