--- a/_layouts/usaco-post.html
+++ b/_layouts/usaco-post.html
@@ -4,21 +4,7 @@ comments: true
 Author: Anonymous
 ---
 {% include report-problem.html %}
-<div>
-    <h2><strong>{{ page.title }}</strong></h2>
-    <img src="{{ site.baseurl }}/assets/home.svg" 
-        height="30px" 
-        style="float: right; margin: 10px; cursor:pointer;"
-        onclick="window.location.href='{{ site.baseurl }}/'"
-    />
-    <img src="{{ site.baseurl }}/assets/back.svg"
-        height="30px"
-        style="float: right; margin: 10px; cursor:pointer;"
-        onclick="window.history.back();"
-    />
-</div>
-<p class="meta">  {{ page.date | date_to_string }}, By {{ page.Author }}</p>
-<div style="clear:right"></div>
+{% include article-head.html %}
 {{ content }}
 
 {% if page.comments != false %}
