--- a/css/personalize.css
+++ b/css/personalize.css
@@ -1,7 +1,3 @@
-::selection{
-  background: #d1d5e0;
-}
-
 .card {
     /* Add shadows to create the "card" effect */
     transition: 0.3s;
@@ -87,46 +83,6 @@
   align-content: flex-start;
 }
 
-
-/* Notification Block CSS */
-.notification{
-  background-color: rgb(250, 247, 194);
-  padding: 8px 16px 8px 16px;
-  margin: 16px 0px 16px 0px;
-  /* Orange Bar on the Left */
-  border-left-style: solid;
-  border-left-width: 8px;
-  border-left-color:orange;
-}
-
-.notification h1,.notification h2,.notification h3,.notification h4,.notification h5{ color: rgb(184, 120, 3); }
-
-/* Info Block CSS */
-.info{
-  background-color: rgb(224, 240, 253);
-  padding: 8px 16px 8px 16px;
-  margin: 16px 0px 16px 0px;
-  /* Blue Bar on the Left */
-  border-left-style: solid;
-  border-left-width: 8px;
-  /*border-left-color:rgb(109, 167, 255)*/
-  border-left-color: #2c3c99;
-}
-
-/* Error Block CSS */
-.error{
-  background-color: rgb(253, 230, 224);
-  padding: 8px 16px 8px 16px;
-  margin: 16px 0px 16px 0px;
-  /* Blue Bar on the Left */
-  border-left-style: solid;
-  border-left-width: 8px;
-  /*border-left-color:rgb(109, 167, 255)*/
-  border-left-color: #c21a1a;
-}
-
-.error h1,.error h2,.error h3,.error h4,.error h5{ color: #901d1d; }
-
 .simple-card {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
@@ -145,44 +101,9 @@
 /* Below Define the style for top Navigation Bar */
 /* A Flex Container for Top Nav Box */
 
-.top-nav-box{
-  backdrop-filter: blur(4px);
-  background-color: #ffffffaa;
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
-  width: 100%;
-  z-index: 999;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: left;
-  align-items: flex-start;
-  align-content: flex-start;
-}
-
 
 @media screen and (max-width: 700px){.nav-button{ padding:5px 15px; }}
 @media screen and (min-width: 700px){.nav-button{ padding:15px 45px; }}
-
-.nav-button {
-  /* Add shadows to create the "card" effect */
-  /* box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1); */
-  transition: 0.3s;
-  background: transparent;
-  margin:0;
-  text-align: center;
-  cursor:pointer;
-  flex-grow: 1;
-  font-size: 1.15rem;
-  animation: fadeIn 1s ease;
-}
-.nav-button:hover {
-  /*box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);*/
-  background: #2c3c99;
-  color: ghostwhite;
-  text-decoration: none;
-}
 
 /* Image Style with Padding */
 .mainPage-img{
@@ -197,16 +118,21 @@
   border-radius: 24px;
   padding: 12px 24px;
   margin: 16px;
-  transition: 0.5s;
   max-width: fit-content;
   border-style: none;
   outline: none;
 }
 .main-button:hover{
-  transition: 0.5s;
-  background-color: #2c3c99;
   color: ghostwhite;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
+  text-decoration: none; 
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  background: linear-gradient(to right, #185792, #3277b8);
+  box-shadow: 0 0 12px rgb(0 0 0 / 10%);
+  position: relative;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  transition: box-shadow .2s linear,opacity .2s linear;
 }
 
 .warn-button{
