--- a/_includes/page-toc.html
+++ b/_includes/page-toc.html
@@ -1,4 +1,5 @@
 <!--侧栏目录生成代码-->
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script>
     $(document).ready(function () {
         $("h1,h2,h3,h4,h5,h6").each(function (i, item) {
