--- a/_layouts/home_page.html
+++ b/_layouts/home_page.html
@@ -10,7 +10,8 @@ useTOC: true
     <script src="https://cdn.bootcdn.net/ajax/libs/typed.js/2.0.9/typed.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/typed.js/2.0.9/typed.min.js"></script>
     <!-- Add jquery cdn -->
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <!--<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
   </head>
   <style>
     /* Main Page Down Arrow Floating */
@@ -61,7 +62,7 @@ useTOC: true
         </script>
     </section>
     {% include nav-bar.html %}
-    <section class="main-content">
+    <section class="main-content" style="max-width: max-content;">
           
       {{ content }}
 
