Update Page Header

--- a/_layouts/home_page.html
+++ b/_layouts/home_page.html
@@ -41,7 +41,7 @@ useTOC: true
             A place for everyone who ❤ Computer Science | A place to learn Algorithms | A place to learn Artificial Intelligence | A place to share knowledge | A place to create Cool Stuff | A place to show your Project
         </span> 
         <p><span class="main-project-tagline"></span></p>
-        <a href="https://gitee.com/gwcompsci/gwcompsci" class="btn">View on Gitee</a>
+        <!--<a href="https://gitee.com/gwcompsci/gwcompsci" class="btn">View on Gitee</a>-->
         <div class="main-flow-arrow"><img src="{{ site.baseurl }}\assets\down_arrow.svg" style="display: block; zoom: 40%; margin: 25vh auto 0 auto"></img></div>
         </div>
         <script> 
