Emergent Fix Page Width Style

--- a/_layouts/home_page.html
+++ b/_layouts/home_page.html
@@ -62,7 +62,7 @@ useTOC: true
         </script>
     </section>
     {% include nav-bar.html %}
-    <section class="main-content" style="max-width: max-content;">
+    <section class="main-content" style="max-width: none;">
           
       {{ content }}
 
