--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,7 @@
     {% if page.useTOC != false %}
     <section class="main-content">
     {% else %}
-    <section class="main-content" style="max-width: max-content;">
+    <section class="main-content" style="max-width: none;">
     {% endif %}
           
         <div>
