--- a/css/personalize.css
+++ b/css/personalize.css
@@ -49,7 +49,7 @@
   align-items: stretch;
 }
 
-.round-card{ cursor:pointer; text-align: center; transition: 0.5s; color: #222222; border-radius: 10px; margin-right: 2rem; flex-grow: 0; flex-basis: 250px; box-shadow: 0 0 36px rgb(0 0 0 / 10%); }
+.round-card{ cursor:pointer; text-align: center; transition: 0.5s; color: #222222; border-radius: 10px; margin-right: 2rem; flex-grow: 0; flex-basis: 250px; box-shadow: 0 0 36px rgb(0 0 0 / 10%); margin-bottom: 2rem;}
 
 .round-card p { padding: 8px; }
 
